Added Bed12 audio

--- a/archive.html
+++ b/archive.html
@@ -481,6 +481,12 @@
                 <button class="carousel-prev">&#10094;</button>
                 <button class="carousel-next">&#10095;</button>
             </div>
+            <div class="audio-container">
+                <audio controls>
+                    <source src="audio/audio12.m4a" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
+            </div>
                 <div class="modal-comments">
                     <p>This is a comment about the image.</p>
                     <p>Another comment goes here.</p>
