--- a/archive.html
+++ b/archive.html
@@ -47,15 +47,21 @@
                 <button class="carousel-prev">&#10094;</button>
                 <button class="carousel-next">&#10095;</button>
             </div>
+            <div class="audio-container">
+                <audio controls>
+                    <source src="audio/audio1.m4a" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
+            </div>
                 <div class="modal-comments">
                     <p>This is a comment about the image.</p>
                     <p>Another comment goes here.</p>
                     <!-- 添加更多评论 -->
                     <div class="form-container">
-                        <form id="comment-form" onsubmit="submitComment(event, 'item1')">
+                        <form id="comment-form-item1" onsubmit="submitComment(event, 'item1')">
                             <div class="textarea-container">
-                                <textarea id="name" name="name"  required></textarea>
-                                <textarea id="comment" name="comment"  required></textarea>
+                                <textarea id="name-item1" name="name"  required></textarea>
+                                <textarea id="comment-item1" name="comment"  required></textarea>
                             </div>
                             <button type="submit" class="submit-button"></button>
                         </form>
@@ -81,15 +87,21 @@
                 <button class="carousel-prev">&#10094;</button>
                 <button class="carousel-next">&#10095;</button>
             </div>
+            <div class="audio-container">
+                <audio controls>
+                    <source src="audio/audio2.m4a" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
+            </div>
                 <div class="modal-comments">
                     <p>This is a comment about the image.</p>
                     <p>Another comment goes here.</p>
                     <!-- 添加更多评论 -->
                     <div class="form-container">
-                        <form id="comment-form" onsubmit="submitComment(event, 'item2')">
+                        <form id="comment-form-item2" onsubmit="submitComment(event, 'item2')">
                             <div class="textarea-container">
-                                <textarea id="name" name="name"  required></textarea>
-                                <textarea id="comment" name="comment"  required></textarea>
+                                <textarea id="name-item2" name="name"  required></textarea>
+                                <textarea id="comment-item2" name="comment"  required></textarea>
                             </div>
                             <button type="submit" class="submit-button"></button>
                         </form>
@@ -115,15 +127,21 @@
                 <button class="carousel-prev">&#10094;</button>
                 <button class="carousel-next">&#10095;</button>
             </div>
+            <div class="audio-container">
+                <audio controls>
+                    <source src="audio/audio3.m4a" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
+            </div>
                 <div class="modal-comments">
                     <p>This is a comment about the image.</p>
                     <p>Another comment goes here.</p>
                     <!-- 添加更多评论 -->
                     <div class="form-container">
-                        <form id="comment-form" onsubmit="submitComment(event, 'item3')">
+                        <form id="comment-form-item3" onsubmit="submitComment(event, 'item3')">
                             <div class="textarea-container">
-                                <textarea id="name" name="name"  required></textarea>
-                                <textarea id="comment" name="comment"  required></textarea>
+                                <textarea id="name-item3" name="name"  required></textarea>
+                                <textarea id="comment-item3" name="comment"  required></textarea>
                             </div>
                             <button type="submit" class="submit-button"></button>
                         </form>
@@ -167,15 +185,21 @@
                 <button class="carousel-prev">&#10094;</button>
                 <button class="carousel-next">&#10095;</button>
             </div>
+            <div class="audio-container">
+                <audio controls>
+                    <source src="audio/audio4.m4a" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
+            </div>
                 <div class="modal-comments">
                     <p>This is a comment about the image.</p>
                     <p>Another comment goes here.</p>
                     <!-- 添加更多评论 -->
                     <div class="form-container">
-                        <form id="comment-form" onsubmit="submitComment(event, 'item4')">
+                        <form id="comment-form-item4" onsubmit="submitComment(event, 'item4')">
                             <div class="textarea-container">
-                                <textarea id="name" name="name"  required></textarea>
-                                <textarea id="comment" name="comment"  required></textarea>
+                                <textarea id="name-item4" name="name"  required></textarea>
+                                <textarea id="comment-item4" name="comment"  required></textarea>
                             </div>
                             <button type="submit" class="submit-button"></button>
                         </form>
@@ -202,15 +226,21 @@
                 <button class="carousel-prev">&#10094;</button>
                 <button class="carousel-next">&#10095;</button>
             </div>
+            <div class="audio-container">
+                <audio controls>
+                    <source src="audio/audio5.m4a" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
+            </div>
                 <div class="modal-comments">
                     <p>This is a comment about the image.</p>
                     <p>Another comment goes here.</p>
                     <!-- 添加更多评论 -->
                     <div class="form-container">
-                        <form id="comment-form" onsubmit="submitComment(event, 'item5')">
+                        <form id="comment-form-item5" onsubmit="submitComment(event, 'item5')">
                             <div class="textarea-container">
-                                <textarea id="name" name="name"  required></textarea>
-                                <textarea id="comment" name="comment"  required></textarea>
+                                <textarea id="name-item5" name="name"  required></textarea>
+                                <textarea id="comment-item5" name="comment"  required></textarea>
                             </div>
                             <button type="submit" class="submit-button"></button>
                         </form>
@@ -237,15 +267,21 @@
                 <button class="carousel-prev">&#10094;</button>
                 <button class="carousel-next">&#10095;</button>
             </div>
+            <div class="audio-container">
+                <audio controls>
+                    <source src="audio/audio6.m4a" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
+            </div>
                 <div class="modal-comments">
                     <p>This is a comment about the image.</p>
                     <p>Another comment goes here.</p>
                     <!-- 添加更多评论 -->
                     <div class="form-container">
-                        <form id="comment-form" onsubmit="submitComment(event, 'item6')">
+                        <form id="comment-form-item6" onsubmit="submitComment(event, 'item6')">
                             <div class="textarea-container">
-                                <textarea id="name" name="name"  required></textarea>
-                                <textarea id="comment" name="comment"  required></textarea>
+                                <textarea id="name-item6" name="name"  required></textarea>
+                                <textarea id="comment-item6" name="comment"  required></textarea>
                             </div>
                             <button type="submit" class="submit-button"></button>
                         </form>
@@ -289,15 +325,21 @@
                 <button class="carousel-prev">&#10094;</button>
                 <button class="carousel-next">&#10095;</button>
             </div>
+            <div class="audio-container">
+                <audio controls>
+                    <source src="audio/audio7.m4a" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
+            </div>
                 <div class="modal-comments">
                     <p>This is a comment about the image.</p>
                     <p>Another comment goes here.</p>
                     <!-- 添加更多评论 -->
                     <div class="form-container">
-                        <form id="comment-form" onsubmit="submitComment(event, 'item7')">
+                        <form id="comment-form-item7" onsubmit="submitComment(event, 'item7')">
                             <div class="textarea-container">
-                                <textarea id="name" name="name"  required></textarea>
-                                <textarea id="comment" name="comment"  required></textarea>
+                                <textarea id="name-item7" name="name"  required></textarea>
+                                <textarea id="comment-item7" name="comment"  required></textarea>
                             </div>
                             <button type="submit" class="submit-button"></button>
                         </form>
@@ -324,15 +366,21 @@
                 <button class="carousel-prev">&#10094;</button>
                 <button class="carousel-next">&#10095;</button>
             </div>
+            <div class="audio-container">
+                <audio controls>
+                    <source src="audio/audio8.m4a" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
+            </div>
                 <div class="modal-comments">
                     <p>This is a comment about the image.</p>
                     <p>Another comment goes here.</p>
                     <!-- 添加更多评论 -->
                     <div class="form-container">
-                        <form id="comment-form" onsubmit="submitComment(event, 'item8')">
+                        <form id="comment-form-item8" onsubmit="submitComment(event, 'item8')">
                             <div class="textarea-container">
-                                <textarea id="name" name="name"  required></textarea>
-                                <textarea id="comment" name="comment"  required></textarea>
+                                <textarea id="name-item8" name="name"  required></textarea>
+                                <textarea id="comment-item8" name="comment"  required></textarea>
                             </div>
                             <button type="submit" class="submit-button"></button>
                         </form>
@@ -359,15 +407,21 @@
                 <button class="carousel-prev">&#10094;</button>
                 <button class="carousel-next">&#10095;</button>
             </div>
+            <div class="audio-container">
+                <audio controls>
+                    <source src="audio/audio9.m4a" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
+            </div>
                 <div class="modal-comments">
                     <p>This is a comment about the image.</p>
                     <p>Another comment goes here.</p>
                     <!-- 添加更多评论 -->
                     <div class="form-container">
-                        <form id="comment-form" onsubmit="submitComment(event, 'item9')">
+                        <form id="comment-form-item9" onsubmit="submitComment(event, 'item9')">
                             <div class="textarea-container">
-                                <textarea id="name" name="name"  required></textarea>
-                                <textarea id="comment" name="comment"  required></textarea>
+                                <textarea id="name-item9" name="name"  required></textarea>
+                                <textarea id="comment-item9" name="comment"  required></textarea>
                             </div>
                             <button type="submit" class="submit-button"></button>
                         </form>
@@ -411,15 +465,21 @@
                 <button class="carousel-prev">&#10094;</button>
                 <button class="carousel-next">&#10095;</button>
             </div>
+            <div class="audio-container">
+                <audio controls>
+                    <source src="audio/audio10.m4a" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
+            </div>
                 <div class="modal-comments">
                     <p>This is a comment about the image.</p>
                     <p>Another comment goes here.</p>
                     <!-- 添加更多评论 -->
                     <div class="form-container">
-                        <form id="comment-form" onsubmit="submitComment(event, 'item10')">
+                        <form id="comment-form-item10" onsubmit="submitComment(event, 'item10')">
                             <div class="textarea-container">
-                                <textarea id="name" name="name"  required></textarea>
-                                <textarea id="comment" name="comment"  required></textarea>
+                                <textarea id="name-item10" name="name"  required></textarea>
+                                <textarea id="comment-item10" name="comment"  required></textarea>
                             </div>
                             <button type="submit" class="submit-button"></button>
                         </form>
@@ -446,15 +506,21 @@
                 <button class="carousel-prev">&#10094;</button>
                 <button class="carousel-next">&#10095;</button>
             </div>
+            <div class="audio-container">
+                <audio controls>
+                    <source src="audio/audio11.m4a" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
+            </div>
                 <div class="modal-comments">
                     <p>This is a comment about the image.</p>
                     <p>Another comment goes here.</p>
                     <!-- 添加更多评论 -->
                     <div class="form-container">
-                        <form id="comment-form" onsubmit="submitComment(event, 'item11')">
+                        <form id="comment-form-item11" onsubmit="submitComment(event, 'item11')">
                             <div class="textarea-container">
-                                <textarea id="name" name="name"  required></textarea>
-                                <textarea id="comment" name="comment"  required></textarea>
+                                <textarea id="name-item11" name="name"  required></textarea>
+                                <textarea id="comment-item11" name="comment"  required></textarea>
                             </div>
                             <button type="submit" class="submit-button"></button>
                         </form>
@@ -492,10 +558,10 @@
                     <p>Another comment goes here.</p>
                     <!-- 添加更多评论 -->
                     <div class="form-container">
-                        <form id="comment-form" onsubmit="submitComment(event, 'item12')">
+                        <form id="comment-form-item12" onsubmit="submitComment(event, 'item12')">
                             <div class="textarea-container">
-                                <textarea id="name" name="name"  required></textarea>
-                                <textarea id="comment" name="comment"  required></textarea>
+                                <textarea id="name-item12" name="name"  required></textarea>
+                                <textarea id="comment-item12" name="comment"  required></textarea>
                             </div>
                             <button type="submit" class="submit-button"></button>
                         </form>
@@ -551,9 +617,6 @@
         }
 
         document.addEventListener('DOMContentLoaded', () => {
-            loadLikes('item1');
-        });
-        document.addEventListener('DOMContentLoaded', () => {
             const itemIds = ['item1', 'item2', 'item3','item4', 'item5', 'item6','item7', 'item8', 'item9','item10', 'item11', 'item12'];
 
             itemIds.forEach(itemId => {
@@ -565,8 +628,8 @@
 
         async function submitComment(event, itemId) {
             event.preventDefault();
-            const name = document.getElementById('name').value;
-            const comment = document.getElementById('comment').value;
+            const name = document.getElementById(`name-${itemId}`).value;
+            const comment = document.getElementById(`comment-${itemId}`).value;
 
             try {
                 const response = await fetch('/.netlify/functions/postComment', {
@@ -580,7 +643,7 @@
 
                 if (data.success) {
                     // 清空表单并显示成功消息
-                    document.getElementById('comment-form').reset();
+                    document.getElementById(`comment-form-${itemId}`).reset();
                     alert('Comment submitted successfully!');
                 }
             } catch (error) {
@@ -639,9 +702,7 @@
                     updateCarousel();
                 });
         });
-        const textarea = document.getElementById('name');
 
-        const overlayImage = document.getElementByName('frame');
 
         textarea.addEventListener('focus', function() {
             overlayImage.style.display = 'block'; // Show the image when the textarea is focused
