--- a/archive.html
+++ b/archive.html
@@ -54,7 +54,7 @@
                 </audio>
             </div>
                 <div class="modal-comments">
-                    <p>This is a comment about the image.</p>
+                    <p>江南意面王：有无睡前酒推荐</p>
                     <p>Another comment goes here.</p>
                     <!-- 添加更多评论 -->
                     <div class="form-container">
@@ -704,14 +704,6 @@
         });
 
 
-        textarea.addEventListener('focus', function() {
-            overlayImage.style.display = 'block'; // Show the image when the textarea is focused
-        });
-
-        // Optional: Hide the image when clicking on the image itself
-        overlayImage.addEventListener('click', function() {
-            overlayImage.style.display = 'none'; // Hide the image when clicked
-        });
 
     </script>
 </body>
