--- a/archive.html
+++ b/archive.html
@@ -65,7 +65,7 @@
                         <div class="like-container">
                             <button id="like-button-item1" onclick="handleLike('item1')" class="like-button"></button>
                             <span id="like-count-item1" class="like-count">...</span>
-                            <span id="comment-count-item1" class="comment-count">2</span>
+                            <span id="comment-count-item1" class="comment-count">...</span>
                         </div>
                         <p class="result"></p>
                 </div>
@@ -102,7 +102,7 @@
                         <div class="like-container">
                             <button id="like-button-item2" onclick="handleLike('item2')" class="like-button"></button>
                             <span id="like-count-item2" class="like-count">...</span>
-                            <span id="comment-count-item2" class="comment-count">2</span>
+                            <span id="comment-count-item2" class="comment-count">...</span>
                         </div>
                         <p class="result"></p>
                 </div>
@@ -137,7 +137,7 @@
                         <div class="like-container">
                             <button id="like-button-item3" onclick="handleLike('item3')" class="like-button"></button>
                             <span id="like-count-item3"class="like-count">...</span>
-                            <span id="comment-count-item3" class="comment-count">2</span>
+                            <span id="comment-count-item3" class="comment-count">...</span>
                         </div>
                         <p class="result"></p>
                 </div>
@@ -192,7 +192,7 @@
                         <div class="like-container">
                             <button id="like-button-item4" onclick="handleLike('item4')" class="like-button"></button>
                             <span id="like-count-item4"class="like-count">...</span>
-                            <span id="comment-count-item4" class="comment-count">2</span>
+                            <span id="comment-count-item4" class="comment-count">...</span>
                         </div>
                         <p class="result"></p>
                 </div>
@@ -230,7 +230,7 @@
                         <div class="like-container">
                             <button id="like-button-item5" onclick="handleLike('item5')" class="like-button"></button>
                             <span id="like-count-item5" class="like-count">...</span>
-                            <span id="comment-count-item5" class="comment-count">2</span>
+                            <span id="comment-count-item5" class="comment-count">...</span>
                         </div>
                         <p class="result"></p>
                 </div>
@@ -268,7 +268,7 @@
                         <div class="like-container">
                             <button id="like-button-item6" onclick="handleLike('item6')" class="like-button"></button>
                             <span id="like-count-item6" class="like-count">...</span>
-                            <span id="comment-count-item6" class="comment-count">2</span>
+                            <span id="comment-count-item6" class="comment-count">...</span>
                         </div>
                         <p class="result"></p>
                 </div>
@@ -323,7 +323,7 @@
                         <div class="like-container">
                             <button id="like-button-item7" onclick="handleLike('item7')" class="like-button"></button>
                             <span id="like-count-item7" class="like-count">...</span>
-                            <span id="comment-count-item7" class="comment-count">2</span>
+                            <span id="comment-count-item7" class="comment-count">...</span>
                         </div>
                         <p class="result"></p>
                 </div>
@@ -358,7 +358,7 @@
                         <div class="like-container">
                             <button id="like-button-item8" onclick="handleLike('item8')" class="like-button"></button>
                             <span id="like-count-item8" class="like-count">...</span>
-                            <span id="comment-count-item8" class="comment-count">2</span>
+                            <span id="comment-count-item8" class="comment-count">...</span>
                         </div>
                         <p class="result"></p>
                 </div>
@@ -396,7 +396,7 @@
                         <div class="like-container">
                             <button id="like-button-item9" onclick="handleLike('item9')" class="like-button"></button>
                             <span id="like-count-item9" class="like-count">...</span>
-                            <span id="comment-count-item9" class="comment-count">2</span>
+                            <span id="comment-count-item9" class="comment-count">...</span>
                         </div>
                         <p class="result"></p>
                 </div>
@@ -448,7 +448,7 @@
                         <div class="like-container">
                             <button id="like-button-item10" onclick="handleLike('item10')" class="like-button"></button>
                             <span id="like-count-item10" class="like-count">...</span>
-                            <span id="comment-count-item10" class="comment-count">2</span>
+                            <span id="comment-count-item10" class="comment-count">...</span>
                         </div>
                         <p class="result"></p>
                 </div>
@@ -486,7 +486,7 @@
                         <div class="like-container">
                             <button id="like-button-item11" onclick="handleLike('item11')" class="like-button"></button>
                             <span id="like-count-item11" class="like-count">...</span>
-                            <span id="comment-count-item11" class="comment-count">2</span>
+                            <span id="comment-count-item11" class="comment-count">...</span>
                         </div>
                         <p class="result"></p>
                 </div>
@@ -521,7 +521,7 @@
                         <div class="like-container">
                             <button id="like-button-item12" onclick="handleLike('item12')" class="like-button"></button>
                             <span id="like-count-item12" class="like-count">...</span>
-                            <span id="comment-count-item12" class="comment-count">2</span>
+                            <span id="comment-count-item12" class="comment-count">...</span>
                         </div>
                         <p class="result"></p>
                 </div>
@@ -623,7 +623,24 @@
                 console.error('Error fetching comments:', error);
             }
         }
-        
+        async function loadCommentCount(itemId) {
+            try {
+                const response = await fetch(`/.netlify/functions/getCommentCount?itemId=${itemId}`);
+                const data = await response.json();
+                const commentCountElement = document.getElementById(`comment-count-${itemId}`);
+                
+                if (commentCountElement) {
+                    commentCountElement.textContent = `${data.count}`;
+                }
+            } catch (error) {
+                console.error('Error fetching comment count:', error);
+                const commentCountElement = document.getElementById(`comment-count-${itemId}`);
+                if (commentCountElement) {
+                    console.error('Error updating like:', error);
+                    // commentCountElement.textContent = 'Error loading comments';
+                }
+            }
+        }
         // function openModal(id) {
         //     document.getElementById(id).style.display = "block";
         //     document.body.classList.add('disable-hover'); // Disable hover effect
@@ -640,6 +657,7 @@
             // 加载评论
             loadComments(itemId);
             loadLikes(itemId);
+            loadCommentCount(itemId);
         }
 
 
