Added about us info.

--- a/about.html
+++ b/about.html
@@ -22,31 +22,51 @@
             <a href="about.html" class="about" aria-label="About"></a>
         </div>
     </nav>
+        <div id="content">
+            <div class="image-and-link">
+                <div class="gallery">
+                    <img src="./Image/about.jpg">
+                    <img src="./Image/XTN.jpg">
+                </div>
+                <div class="link">
+                    <a href="mailto:x20030822@gmail.com">
+                        <img
+                            src="./Image/email.png"
+                            alt="Mail Icon"
+                        >
+                    </a>
+                    </a>
+                    <a href="https://www.instagram.com/xie_tianni">
+                        <img
+                            src="./Image/ig.png"
+                            alt="Instagram Icon"
+                        >
+                    </a>
+                    <a href="https://www.xiaohongshu.com/user/profile/60c2a970000000000100065f?xhsshare=CopyLink&appuid=5a31462ddb2e601d5b79dbfc&apptime=1722873867&share_id=8d9a1112af474fa4a84f6d7a16c83f7b">
+                        <img
+                            src="./Image/xhs.png"
+                            alt="Xiaohongshu Icon"
+                        >
+                    </a>
+                </div>
+            </div>
+            <div class="text-content">
+                <p style="margin: 0">About Us：<strong>"The Bed is the Smallest Unit of Noah's Ark"</strong> </p>
+                <P style="margin: 0;">This is a project about beds, creating a digital archive about them. People spend one-third of their day in bed, and the most intimate stories often happen there. The sheets we choose to keep, the pillows we carefully select, and the color of our duvet covers all reflect stories about who we are.</p>
+            </div>
+        </div>
+        <p style="margin-left: 11%; max-width: 75%; text-align: justify; line-height: 1.6;">But sometimes, it's not just a literal bed—it becomes a metaphor, suggesting all the tender, ambiguous, or even cruel moments that may happen at the bedside or within the comfort zone. There are no stories here, no narratives, no climaxes or endings. It's more like fragments of memories cut off, like parts of an iceberg hidden from view. A bed, the softest place in the world, might reveal something sincere, unspeakable, or indescribable.</p>
+        <p style="margin-left: 11%; max-width: 75%; text-align: justify; line-height: 1.6;">From June 23 to August 15, 2024, I invited 12 participants and conducted in-person interviews with them about their beds, creating a unique personal portrait for each of them. These participants came from different backgrounds, including friends, strangers, people from various professions, and different age groups. The bed, as a concrete object marking the end of social interactions, sets the boundary between social and personal activities. The intrusion into their sleeping space represents a loss of sociality, giving me the chance to access the non-social aspects of their lives.</p>
+        <p style="margin-left: 11%; max-width: 75%; text-align: justify; line-height: 1.6;">Through a series of archives, we peek into 12 intimate spaces. The bed, decorations, colors, layout, and personal items are like scenes from a novel, allowing us to imagine the lives and stories of different protagonists in the context of their time, offering glimpses into their inner world. I hope viewers can interpret a more emotional side of society through these differences.
+        <p style="margin-left: 11%; max-width: 75%; text-align: justify; line-height: 1.6;">Feel free to share your thoughts on the message board, and enthusiastically contribute by telling us your own warm stories with your bed!
+        <p style="margin-left: 11%; max-width: 75%; text-align: justify; line-height: 1.6;">Finally, thanks to the technical support of this website: JiXin</p>
 
-    <div id="content">
-        <img src="./Image/about.jpg">
-    </div>
+        <div style="text-align: center; margin-top: 50px;">
+            <img style="width: 300px; height: auto; display: block; margin: 0 auto;" src="./Image/interview.jpg">
+            <p style="font-size: medium;">(Interview Record, filmed on 24/07/2024)</p>
+        </div>
 
-    <div class="link">
-        <a href="mailto:x20030822@gmail.com">
-            <img
-                src="./Image/email.png"
-                alt="Mail Icon"
-            >
-        </a>
-        </a>
-        <a href="https://www.instagram.com/xie_tianni">
-            <img
-                src="./Image/ig.png"
-                alt="Instagram Icon"
-            >
-        </a>
-        <a href="https://www.xiaohongshu.com/user/profile/60c2a970000000000100065f?xhsshare=CopyLink&appuid=5a31462ddb2e601d5b79dbfc&apptime=1722873867&share_id=8d9a1112af474fa4a84f6d7a16c83f7b">
-            <img
-                src="./Image/xhs.png"
-                alt="Xiaohongshu Icon"
-            >
-        </a>
-    </div>
+
+
 
 </body>
