--- a/archive.html
+++ b/archive.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Days of Bed Care</title>
+    <title>Days of Bed Care: Archive</title>
     <link href="archive.css" rel="stylesheet" />
 </head>
 
