Modified the layout of the paragraphs.

--- a/game.html
+++ b/game.html
@@ -36,7 +36,9 @@
         </div>
       </div>
       <div class="image-container">
-        <img class="Info" src="./Image/instructions.png" />
+        <img class="Info" src="./Image/instructions1.png" />
+        <img class="Info" src="./Image/instructions2.png" />
+        <img class="Info" src="./Image/instructions3.png" />
     </div>
   </div>
   
