Modified the font size and the instruction size.

--- a/game.html
+++ b/game.html
@@ -38,7 +38,9 @@
       <div class="image-container">
         <img class="Info" src="./Image/instructions1.png" />
         <img class="Info" src="./Image/instructions2.png" />
-        <img class="Info" src="./Image/instructions3.png" />
+        <img class="Info" src="./Image/instructions4.png" />
+        <img class="Info" style="height:37px;"
+        src="./Image/instructions5.png" />
     </div>
   </div>
   
